# x-control

./: .gitignore  Cargo.toml  Documentation.md  README.md
xcontrol/: Cargo.toml  build.rs
xcontrol-relay/: Cargo.toml
xcontrol-relay/src/: main.rs
xcontrol-relay/src/web/: index.html
xcontrol/src/: capture.rs  input.rs  main.rs
